# PointCloud-DepthFusion

./: .clang-format  .gitignore  README.html  README.md
camera_interfaces/: CMakeLists.txt
camera_node/: CMakeLists.txt  package.xml
camera_node/config/: config_default.yaml
camera_node/include/camera_node/: camera_node.hpp  config.hpp  realsense.hpp
camera_node/include/camera_node/nlohmann_json/: json.hpp
camera_node/launch/: camera_left.launch.py
camera_node/src/: camera_node.cpp  config.cpp  main.cpp  realsense.cpp
fusion_node/: CMakeLists.txt  Doxyfile.in  package.xml
fusion_node/config/: config_default.yaml
fusion_node/data/: README.md
fusion_node/include/: fusion_node.hpp
fusion_node/launch/: camera_left.launch.py  standalone.launch.py
fusion_node/src/: fusion_node.cpp  fusion_node.hpp  main.cpp
image_node/: CMakeLists.txt  package.xml
image_node/include/image_node/: image_node.hpp
image_node/src/: image_node.cpp  main.cpp
pointcloud_processing/: CMakeLists.txt  Doxyfile.in  package.xml
pointcloud_processing/include/pointcloud_processing/: color_frame.h  compactor.cuh  depth_frame.h  error_check.h  frameset.h  intrinsics.h  kernels.cuh  pointcloud.h
pointcloud_processing/src/: color_frame.cpp  depth_frame.cpp  error_check.cpp  frameset.cpp  kernels.cu  pointcloud.cpp
registration_node/: CMakeLists.txt  Doxyfile.in  package.xml
registration_node/config/: config_default.yaml
registration_node/launch/: camera_right.launch.py  standalone.launch.py
registration_node/src/: main.cpp  registration.cpp  registration.h  registration_node.cpp  registration_node.hpp
